client/renderBlogPost.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&family=Press+Start+2P&display=swap');

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: sans-serif;
    text-decoration: none;
    color: white;
}

:root{
    --main-color: #1b3548;
    --secondary-color: #126dae;
    --best-font:  font-family: "MS Gothic", Tahoma, sans-serif;
}
span{
    color: #2aa198;
}

body {
    background-color: black;
    font-family: "Pixel NES";
}

/* rain animation */

#rainBackgroundContainer {
    position: fixed;
    top: -100px;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 100000;
    pointer-events: none;
  }
  
  .raindrop {
    position: absolute;
    background: linear-gradient(to bottom, rgba(200, 200, 255, 0.7), rgba(200, 200, 255, 0));
    animation: rainAnimation linear infinite;
  }
  
  @keyframes rainAnimation {
    to {
      transform: translateY(100vh);
    }
  } 

/* header */

header{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    padding: 20px;
}

.press-start {
    font-family: "Press Start 2P", system-ui;
    font-weight: 400;
    font-style: normal;
    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
    color: rgb(144, 143, 143);
    padding: 10px;
    font-size: 4rem;
    animation: blink 1s infinite;
}

hr{
    width: 100%;
    border: 2px solid #161719;
    animation: blink 1s 5;
}

/* blinking animation */
@keyframes blink {
    0% {
        opacity: 1;
    }
    50% {
        opacity: 0.5;
    }
    100% {
        opacity: 1;
    }
}

/* responsive design for header on phones */
@media only screen and (max-width: 650px){
    .press-start{
        font-size: 3rem;
    }
}




/* scrollbar  */

::-webkit-scrollbar {
    width: 1em;
}

::-webkit-scrollbar-track {
    background-color: black;
}

::-webkit-scrollbar-thumb {
    border: 1px solid #1b3548;
    background-color: black;
}

/* blog */

.blog-inner{
    padding-left: 20%;
    padding-right: 20%;
}

/* Article Styles */
article {
    font-family: 'Poppins', sans-serif;
    max-width: 900px;
    margin: 40px auto;
    padding: 20px;
    background-color: #000;
    color: #f5f5f5;
    border: 1px solid #1b3548;
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
}

article p {
    font-size: 1rem;
    line-height: 1.6;
    color: #f5f5f5;
    margin-bottom: 16px;
}

article p strong {
    font-size: 1.2rem;
    color: #126dae;
}

article code {
    display: block;
    background-color: #2d2d2d;
    color: #f8f8f2;
    padding: 10px;
    border-radius: 5px;
    margin: 20px 0;
    font-family: 'Courier New', Courier, monospace;
}

article br {
    margin-bottom: 20px;
}

@media (max-width: 600px) {
    article {
        padding: 15px;
    }

    article p {
        font-size: 0.9rem;
    }

    article code {
        padding: 8px;
    }
}

.blog-inner > h1{
    font-family: "Press Start 2P", system-ui;
    font-weight: 400;
    font-style: normal;
    font-size: 1.6rem;
    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
    color: rgb(253, 252, 252);
    margin-bottom: 25px;
}

.blog-inner > h1, h2, p {
    margin-top: 15px;
}


.blog-inner > #soothing-pic{
    width: 100%;
    height: 150px;
}


@media only screen and (max-width: 650px){
    .blog-inner{
        width: 100%;
        margin: 10px;
    }

    .blog-inner > h1{
      
        text-align: center;
    }
    .blog-inner > #soothing-pic{
        text-align: center;
    }
    
    .blog-inner{
        padding: 5%;
    }

    article {
        width: 100%;
        margin: 0;
        
    }
}

